--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -108,6 +108,12 @@
                   {{form_create.objetivo_create}}
                </div>
             </div>
+            <div class="col-md-2">
+               <div class="form-group">
+                  <label>Visita</label>
+                  {{form_create.visita_create}}
+               </div>
+            </div>
          </div>
 
       <div class="row">
