bajando la mansa zorra

--- a/web/main/templates/main/index.html
+++ b/web/main/templates/main/index.html
@@ -20,161 +20,6 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container" style="max-width:100%">
-
-<div class="card mb-4">
-
-  <div class="card-body">
-
-  <h5 class="card-title">Tasaciones activas</h5>
-
-  <table class="table table-borderless">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col" style="text-align:center;">Tipo</th>
-        <th scope="col">Dirección</th>
-        <th scope="col">Tasador</th>
-        <th scope="col" style="text-align:center;">Estado</th>
-        <th scope="col">Creada</th>
-        <th scope="col">Entrega</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for appraisal in appraisals_active %}
-      <tr>
-        <td>
-          {{ appraisal.id }}
-        </td>
-        <td style="text-align:center;">
-          <i class="{{ appraisal.realEstate.get_propertyTypeIcon }}"></i>
-        </td>
-        <td>
-          <a class="text-dark" href="{{appraisal.url}}">
-            {{ appraisal.realEstate.address }}
-          </a>
-        </td>
-        {% if appraisal.tasadorUser %}
-        <td>
-          {{ appraisal.tasadorUser.first_name }} {{ appraisal.tasadorUser.last_name }}
-        </td>
-        {% else %}
-        <td>
-          <p class="font-weight-bold text-warning">No asignado</p>
-        </td>
-        {% endif %}
-        <td style="text-align:center;">
-          {% if appraisal.active %}
-          <i class="fas fa-play"></i>
-          {% elif appraisal.paused %}
-          <i class="fas fa-pause"></i>
-          {% endif %}
-        </td>
-        <td class="Creada">
-          <script>timeCreated("{{appraisal.timeCreated | date:"c"}}");</script>
-        </td>
-        <td>
-        {% if appraisal.daysLeft > 3 %}
-          <p class="font-weight-bold"><script>timeLeft("{{appraisal.timeDue|date:"c"}}");</script></p>
-        {% elif appraisal.daysLeft > 1 %}
-          <p class="text-warning font-weight-bold"><script>timeLeft("{{appraisal.timeDue|date:"c"}}");</script></p>
-        {% else %}
-          <p class="text-danger font-weight-bold"><script>timeLeft("{{appraisal.timeDue|date:"c"}}");</script></p>
-        {% endif %}
-        </td>
-        <td>
-        <button type="button" data-id="{{appraisal.id}}" class="btn btn-dark btn-sm delete_appraisal" style="font-family:Material Icons;font-size:1.0em;margin-top:-1.0em;margin-bottom:-1.0em;">
-          delete
-        </button>
-        <button onclick="location.href='{{appraisal.url}}?tab=logbook'" type="button" id="button_delete" class="btn btn-dark btn-sm" style="font-family:Material Icons;font-size:1.0em;margin-top:-1.0em;margin-bottom:-1.0em;">
-          comment
-        </button>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  </div>
-</div>
-
-<div class="card mb-4">
-
-  <div class="card-body">
-
-  <h5 class="card-title">Tasaciones previas</h5>
-
-  <table class="table table-borderless">
-    <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Tipo</th>
-        <th scope="col">Dirección</th>
-        <th scope="col">Tasador</th>
-        <th scope="col">Fecha creación</th>
-        <th scope="col">Fecha término</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for appraisal in appraisals_finished %}
-      <tr>
-        <td>
-          {{ appraisal.id }}
-        </td>
-        <td>
-          {{ appraisal.realEstate.get_propertyType_display }}
-        </td>
-        <td>
-          <a class="text-dark" href={{appraisal.url}}>
-            {{ appraisal.realEstate.address }}
-          </a>
-        </td>
-        <td>
-          {{ appraisal.tasadorUser.first_name }} {{ appraisal.tasadorUser.last_name }}
-        </td>
-        <td>
-          {{appraisal.timeCreated | date:"D d M, H:i"}}
-        </td>
-        <td>
-          {{appraisal.timeFinished | date:"D d M, H:i"}}
-        </td>
-        <td>
-        <button onclick="location.href='{{appraisal.url}}?tab=logbook'" type="button" id="button_delete" class="btn btn-dark btn-sm">
-          visibility
-        </button>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  </div>
-</div>
-
-</div>
-
-{% include "main/modals.html" %}
-
-<script>
-  $(document).on('click','.delete_appraisal',function(){
-      var id = $(this).data('id');
-      $.ajax({
-          url:'',
-          type:'POST',
-          data:{
-              'id':id,
-              'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),
-          },
-          success:function(data){
-              $('#appraisal_id').val(id);
-              $('#modalDelete').modal('show');
-          },
-          error:function(){
-              console.log('error')
-          },
-      });
-  });
-</script>
+{% include "main/appraisals.html" %}
 
 {% endblock %}
