--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -27,8 +27,7 @@
             </div>
         </div>
         <div class="col-8">
-            <h5 class="pt-3">Tasaciones activas</h5>
-            <h5 class="pt-3">Tasaciones pasadas</h5>
+            {% include "main/appraisals.html" %}
         </div>
     </div>
 </div>
