--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -26,9 +26,21 @@
                 </div>
             </div>
         </div>
-        <div class="col-8">
-            {% include "main/appraisals.html" %}
-        </div>
+
     </div>
 </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+                <div class="card-body">
+                    {% include "main/appraisals.html" %}
+                </div>
+        </div>
+
+    </div>
+</div>
+
 {% endblock %}
+
+
