--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -106,8 +106,13 @@
         </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
+        <form action="" method="post" id="form">
+          {% csrf_token %}
+          <input id="appraisal_id" name="appraisal_id" type="hidden" value="2">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
+
+         </form>
       </div>
     </div>
   </div>
