En la misma zona

--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -16,7 +16,8 @@
     <nav class="navbar justify-content-between">
       <!--<a class="navbar-brand" href="#">-->
       <h4>
-        <span class="badge badge-secondary">{{realestate.get_propertyType_display}}</span>{{realestate.address}}
+        <span class="badge badge-secondary mr-2" style="font-size: 100%;">{{realestate.get_propertyType_display}}</span>
+        {{realestate.address}}
       </h4>
       <!--</a>-->
       <ul class="navbar-nav mr-auto"> </ul>
