--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -15,7 +15,7 @@
   <div class="row">
     <div class="col-4">
       <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">{{realestate.addressStreet.label_tag}}</label>
+        <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressStreet.label_tag}}</label>
         <div class="col-sm-9">
           <input type="text" class="form-control form-control-sm" value="{{realestate.addressStreet}}" disabled>
         </div>
@@ -23,16 +23,16 @@
     </div>
     <div class="col-3">
       <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Número</label>
+        <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressNumber.label_tag}}</label>
         <div class="col-sm-9">
           <input type="text" class="form-control form-control-sm" value="{{realestate.addressNumber}}" disabled>
         </div>
       </div>
     </div>
-    {% if realestate.apartment %}
+    {% if realestate.is_apartment %}
     <div class="col-2">
       <div class="form-group row">
-        <label class="col-sm-4 col-form-label-sm text-right">Dpto.</label>
+        <label class="col-sm-4 col-form-label-sm text-right">{{forms.property.number.label_tag}}</label>
         <div class="col-sm-8">
           <input type="text" class="form-control form-control-sm" value="{{realestate.apartment.number}}" disabled>
         </div>
@@ -44,7 +44,7 @@
   <div class="row">
     <div class="col-4">
       <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Comuna</label>
+        <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressCommune.label_tag}}</label>
         <div class="col-sm-9">
           <input type="text" class="form-control form-control-sm" value="{{realestate.addressCommune}}" disabled>
         </div>
@@ -52,7 +52,7 @@
     </div>
     <div class="col-3">
       <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Región</label>
+        <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressRegion.label_tag}}</label>
         <div class="col-sm-9">
           <input type="text" class="form-control form-control-sm" value="{{realestate.addressRegion}}" disabled>
         </div>
@@ -88,21 +88,21 @@
           <div class="form-group row align-middle">
             <label class="col-sm-4 col-form-label-sm text-right">{{forms.property.floor.label_tag}}</label>
             <div class="col-4">
-              {{forms.realestate.floor}}
+              {{forms.property.floor}}
             </div>
           </div>
 
           <div class="form-group row align-middle">
             <label class="col-sm-4 col-form-label-sm text-right">{{forms.property.orientation.label_tag}}</label>
             <div class="col-lg-4">
-              {{forms.apartment.orientation}}
+              {{forms.property.orientation}}
             </div>
           </div>
           {% endif %}
 
           <label class="col-sm-4 col-form-label-sm font-weight-bold">Superficie</label>
 
-          {% if realestate.is_apartment %}
+          {% if realestate.is_house %}
           <div class="form-group row align-middle">
             <label class="col-sm-4 col-form-label-sm text-right">Construida</label>
             <div class="col-lg-5">
@@ -119,7 +119,33 @@
             <label class="col-sm-4 col-form-label-sm text-right">Útil</label>
             <div class="col-lg-5">
               <div class="input-group input-group-sm">
+                {{forms.property.terrainSquareMeters}}
+                <div class="input-group-append">
+                  <div class="input-group-text">m2</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endif %}
+
+          {% if realestate.is_apartment %}
+          <div class="form-group row align-middle">
+            <label class="col-sm-4 col-form-label-sm text-right">Construida</label>
+            <div class="col-lg-5">
+              <div class="input-group input-group-sm">
                 {{forms.property.usefulSquareMeters}}
+                <div class="input-group-append">
+                  <div class="input-group-text">m2</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group row align-middle">
+            <label class="col-sm-4 col-form-label-sm text-right">Útil</label>
+            <div class="col-lg-5">
+              <div class="input-group input-group-sm">
+                {{forms.property.terraceSquareMeters}}
                 <div class="input-group-append">
                   <div class="input-group-text">m2</div>
                 </div>
